[project]
name = "longchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "load-dotenv>=0.1.0",
    "openai>=2.30.0",
    "wikipedia>=1.4.0",
]
